# xgrep

./: ChangeLog.md  LICENSE  README.md  cabal.project  stack.yaml  xgrep.cabal
.github/workflows/: haskell-ci.yml  release.yml
executables/xgrep/: Main.hs
src/: Main.hs
