cabal-version: 3.0
name: xgrep
version: 0.1.0.0
author: Ignat Insarov
maintainer: kindaro@gmail.com
synopsis: Cut through your XML with CSS selectors!
category: Web
license: ISC
license-file: LICENSE
extra-source-files: ChangeLog.md
build-type: Simple

executable xgrep
  hs-source-dirs: executables/xgrep
  main-is: Main.hs
  build-depends:
    , base >=4.9
    , base-unicode-symbols
    , distributive
    , blaze-markup
    , containers >= 0.6.0.1
    , html-conduit
    , pretty-show
    , optparse-applicative
    , selectors
    , text
    , vector
    , xml-conduit

  default-language: Haskell2010
  default-extensions:
    ApplicativeDo
    BlockArguments
    ImportQualifiedPost
    PartialTypeSignatures
    PatternGuards
    RecordWildCards
    UnicodeSyntax
