cabal-version: 3.0
name: xgrep
version: 0.2.0.0
author: Ignat Insarov
maintainer: kindaro@gmail.com
synopsis: Cut through your XML with CSS selectors!
category: Web
license: ISC
license-file: LICENSE
tested-with:
  , GHC==7.0.4
  , GHC==7.2.2
  , GHC==7.4.2
  , GHC==7.6.3
  , GHC==7.8.4
  , GHC==7.10.3
  , GHC==8.0.2
  , GHC==8.2.2
  , GHC==8.4.4
  , GHC==8.6.5
  , GHC==8.8.4
  , GHC==8.10.7
  , GHC==9.0.2
  , GHC==9.2.2

extra-source-files: ChangeLog.md
build-type: Simple

executable xgrep
  hs-source-dirs: executables/xgrep
  main-is: Main.hs
  build-depends:
    , base >=4.9
    , base-unicode-symbols
    , blaze-markup
    , bytestring
    , cassava
    , containers >= 0.6.0.1
    , distributive
    , html-conduit
    , optparse-applicative
    , pretty-show
    , selectors >= 0.1
    , split
    , text
    , vector
    , xml-conduit

  default-language: Haskell2010
  default-extensions:
    ApplicativeDo
    BlockArguments
    ImportQualifiedPost
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    RecordWildCards
    ScopedTypeVariables
    TypeApplications
    UnicodeSyntax

  ghc-options: -Wall -Wextra
