cabal-version: 3.0
name: xgrep
version: 0.2.0.0
author: Ignat Insarov
maintainer: kindaro@gmail.com
synopsis: Cut through your XML with CSS selectors!
category: Web
license: ISC
license-file: LICENSE
tested-with: GHC==8.10.7, GHC==9.0.2, GHC==9.2.2
extra-source-files: ChangeLog.md
build-type: Simple

executable xgrep
  hs-source-dirs: executables/xgrep
  main-is: Main.hs
  build-depends:
    , base >=4.9
    , base-unicode-symbols
    , blaze-markup
    , bytestring
    , cassava
    , containers >= 0.6.0.1
    , distributive
    , html-conduit
    , optparse-applicative
    , pretty-show
    , selectors ^>= 0.2
    , split
    , text
    , vector
    , xml-conduit

  default-language: Haskell2010
  default-extensions:
    ApplicativeDo
    BlockArguments
    ImportQualifiedPost
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    RecordWildCards
    ScopedTypeVariables
    TypeApplications
    UnicodeSyntax

  ghc-options: -Wall -Wextra
